--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,8 @@ body {
 
 header {
   width: 100%;
+  min-height: 100px;
+  max-height: 150px;
   display: block;
   top: 0;
   /* position: fixed; */
