--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,7 @@ header {
   max-height: 150px;
   display: block;
   top: 0;
-  /* position: fixed; */
+  position: absolute;
   /* position: sticky; */
   flex-wrap: wrap;
   background-color: white;
@@ -171,7 +171,7 @@ footer {
 
 .course {
   padding: 30px;
-  text-align: center;
+  /* text-align: center; */
   /* flex-direction: row; */
 }
 
