--- a/styles/text.css
+++ b/styles/text.css
@@ -4,6 +4,12 @@ body {
   font-size: 16px;
 }
 
+.title-huge {
+  font-weight: bold;
+  font-size: 60px;
+  margin-bottom: 18px;
+}
+
 .title-large {
   font-weight: bold;
   font-size: 48px;
