--- a/styles/button.css
+++ b/styles/button.css
@@ -8,6 +8,16 @@
   font-weight: bold;
 }
 
+.big-button {
+  display: inline-block;
+  border-radius: 3px;
+  font-size: 24px;
+  text-decoration: none;
+  padding: 20px 40px;
+  text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.15);
+  font-weight: bold;
+}
+
 .bottom-button {
   width: 100%;
   display: inline-block;
@@ -19,6 +29,21 @@
   font-weight: bold;
 }
 
+.bottom-button:hover {
+  width: 100%;
+  display: inline-block;
+  border-radius: 3px;
+  font-size: 20px;
+  text-decoration: none;
+  padding: 10px 30px;
+  text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.15);
+  font-weight: bold;
+  background: rgb(228, 101, 54);
+  color: #fff;
+  transition: all ease 1s;
+
+}
+
 .button-coral {
   background: coral;
   color: rgb(170, 222, 253);
@@ -27,6 +52,12 @@
 .button-green {
   background: #8aba56;
   color: #fff;
+}
+
+.button-green:hover {
+  background: coral;
+  color: #fff;
+  transition: all ease 1s;
 }
 
 .button-blue {
