tel and mail links + little maintenance as usual

--- a/styles/courses.css
+++ b/styles/courses.css
@@ -11,7 +11,7 @@
 
 .course {
   padding: 30px;
-  border: solid 2px silver;
+  border: solid 1px silver;
   border-radius: 30px;
 }
 
@@ -19,4 +19,5 @@
   cursor: pointer;
   color: rgb(228, 101, 54);
   -webkit-text-stroke: .03em #32082e;
+  transition: all ease .6s;
 }
